# Core-Forms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
extra/: Core-Forms.natvis  DllMain.cpp  appBasicForm.cpp  appControls.cpp  appDevTesting.cpp
include/: formsFramework.h
include/controls/: AnimationControl.h  ButtonControl.h  ButtonState.h  ButtonStyle.h  CheckBoxControl.h  ComboBoxControl.h  ComboBoxInfo.h  ComboBoxStyle.h  CommonControls.h  Control.h  ControlDictionary.h  ControlIdentRange.h  Controls.h  CountingIterator.h  EditControl.h  EditStyle.h  GroupBoxControl.h  HeaderControl.h  HeaderStyle.h  LabelControl.h  LinkControl.h  LinkStyle.h  ListBoxControl.h  ListBoxItemData.h  ListBoxStyle.h  ListViewControl.h  ListViewEventArgs.h  ListViewExStyle.h  ListViewStyle.h  PanelControl.h  PictureControl.h  ProgressBarControl.h  ProgressBarStyle.h  RadioButtonControl.h  RichText.h  StaticControl.h  StaticStyle.h
include/controls/ListViewEventArgs/: ItemChangedEventArgs.h
include/dialogs/: Dialog.h  DialogEventArgs.h  DialogItemTemplate.h  DialogStyle.h  DialogTemplate.h  DialogTemplateBlob.h  DialogTemplateReader.h  DialogTemplateTypes.h  DialogTemplateWriter.h  ResourceIdOrString.h
include/dialogs/EventArgs/: InitDialogEventArgs.h  LoadDialogEventArgs.h
include/forms/: AccessibilityFlags.h  Accessible.h  BuiltInWindowMessages.h  ChildWindowIterator.h  ClassId.h  ClassStyle.h  ExWindowStyle.h  Menu.h  MenuBar.h  NonClientLayout.h  Response.h  ScrollBarInfo.h  UnmanagedWindow.h  Window.h  WindowClass.h  WindowEventArgs.h  WindowFont.h  WindowHitTest.h  WindowInfo.h  WindowStyle.h
include/forms/EventArgs/: ActivateNonClientEventArgs.h  CommandEventArgs.h  ControlColourEventArgs.h  CreateWindowEventArgs.h  CustomDrawEventArgs.h  DropFilesEventArgs.h  EraseBackgroundEventArgs.h  GetObjectEventArgs.h  HitTestNonClientEventArgs.h  MeasureItemEventArgs.h  MeasureMenuEventArgs.h  MinMaxEventArgs.h  MouseEventArgs.h  MouseNonClientEventArgs.h  NonClientActivateEventArgs.h  NonClientCalculateEventArgs.h  NonClientHitTestEventArgs.h  NonClientMouseEventArgs.h  NonClientPaintEventArgs.h  NotifyEventArgs.h  OwnerDrawEventArgs.h  OwnerDrawMenuEventArgs.h  PaintNonClientEventArgs.h  PaintWindowEventArgs.h  ResizeWindowEventArgs.h  SetFontEventArgs.h  SetWindowFontEventArgs.h  ShowWindowEventArgs.h  TimerEventArgs.h  UserEventArgs.h
include/graphics/: Bitmap.h  Border.h  Brush.h  Colours.h  Cursor.h  DrawFlags.h  Font.h  FontBuilder.h  Graphics.h  HatchBrush.h  Icon.h  ImageList.h  Measurement.h  ObjectFlags.h  Pen.h  PenFlags.h  Percentage.h  Rectangle.h  Region.h  ShellImageList.h  SizePoint.h  StockBrush.h  StockFont.h  StockPen.h  SystemBrush.h
include/lookNfeel/: DarkModernLookNFeel.h  DarkRetroLookNFeel.h  IColourScheme.h  ILookNFeelProvider.h  IWindowFrame.h  LookNFeelDecorator.h  LookNFeelProvider.h  ModernLookNFeel.h  Nt6LookNFeel.h  RetroLookNFeel.h  Win31LookNFeel.h
include/support/: ClassSemantics.h  DebugOutputBuffer.h  DebugStream.h  Delegate.h  EnumBitset.h  EnumOperators.h  HexString.h  ObservableEvent.h  Percentage.h  to_string.h
include/system/: Message.h  MessageDictionary.h  MessageName.h  MessageQueue.h  MessageQueueIterator.h  Module.h  ResourceId.h  Resources.h  SharedHandle.h  WindowMessageDictionary.h
include/windows/: AccessibilityFlags.h  Accessible.h  ChildWindowIterator.h  ClassId.h  ClassStyle.h  ExWindowStyle.h  ILookNFeelProvider.h  LookNFeelProvider.h  Nt6LookNFeel.h  Win31LookNFeel.h  Window.h  WindowClass.h  WindowEventArgs.h  WindowInfo.h  WindowStyle.h
res/: appBasicForm.rc  appCommon.rc  resource.h
sample/: appControls.cpp  appDevTesting.cpp  appModern.cpp
src/: Extensions.h  Optimized.cc  PlatformSdk.h  StdLibrary.h  libBoost.h  resource.h
src/controls/: ButtonControl.cpp  ComboBoxControl.cpp  CommonControls.cpp  EditControl.cpp  LabelControl.cpp  ListBoxControl.cpp  ListViewControl.cpp  ProgressBarControl.cpp  StaticControl.cpp
src/dialogs/: Dialog.cpp  DialogTemplateReader.cpp  DialogTemplateWriter.cpp
src/forms/: ChildWindowIterator.cpp  Window.cpp  WindowClass.cpp  WindowEventArgs.cpp
src/forms/EventArgs/: ControlColourEventArgs.cpp  CustomDrawEventArgs.cpp  MeasureItemEventArgs.cpp  MeasureMenuEventArgs.cpp  NonClientPaintEventArgs.cpp  NotifyEventArgs.cpp  OwnerDrawEventArgs.cpp  OwnerDrawMenuEventArgs.cpp  PaintNonClientEventArgs.cpp  PaintWindowEventArgs.cpp
src/graphics/: Brush.cpp  Font.cpp  Graphics.cpp  LookNFeelProvider.cpp  Nt6LookNFeel.cpp  StockBrush.cpp  StockFont.cpp  StockPen.cpp  SystemBrush.cpp  Win31LookNFeel.cpp
src/lookNfeel/: DarkModernLookNFeel.cpp  DarkRetroLookNFeel.cpp  DefaultLookNFeel.cpp  LookNFeelProvider.cpp  ModernLookNFeel.cpp  Nt6LookNFeel.cpp  RetroLookNFeel.cpp  Win31LookNFeel.cpp
src/support/: DebugOutputBuffer.cpp  DebugStream.cpp
src/system/: Message.cpp  MessageQueue.cpp  MessageQueueIterator.cpp  Module.cpp  ResourceId.cpp
src/windows/: ChildWindowIterator.cpp  Window.cpp  WindowClass.cpp  WindowEventArgs.cpp
test/: SanityTest.cpp
